@@ -470,6 +470,7 @@ structure:
   MyProject/
   |-- CHANGES.txt
   |-- development.ini
+  |-- MANIFEST.in
   |-- myproject
   |   |-- __init__.py
   |   |-- resources.py
@@ -508,6 +509,10 @@ describe, run, and test your application.
 
 #. ``setup.cfg`` is a :term:`setuptools` configuration file used by
    ``setup.py``.
+
+#. ``MANIFEST.in`` is a :term:`distutils` "manifest" file, naming which files
+    should be included in a source distribution of the package when ``python
+    setup.py sdist`` is run.
 
 #. ``setup.py`` is the file you'll use to test and distribute your
    application.  It is a standard :term:`setuptools` ``setup.py`` file.
@@ -711,18 +716,36 @@ who want to use your application.
 
 .. warning::
 
-   By default, ``setup.py sdist`` does not place non-Python-source files in
-   generated tarballs.  This means, in this case, that the
-   ``templates/mytemplate.pt`` file and the files in the ``static`` directory
-   are not packaged in the tarball.  To allow this to happen, check all the
-   files that you'd like to be distributed along with your application's
-   Python files into Subversion.  After you do this, when you rerun
-   ``setup.py sdist``, all files checked into the version control system will
-   be included in the tarball.  If you don't use Subversion, and instead use
-   a different version control system, you may need to install a setuptools
-   add-on such as ``setuptools-git`` or ``setuptools-hg`` for this behavior
-   to work properly.  Alternatively, you can specify the non-Python-source
-   files by hand in a  ``manifest template``, called ``MANIFEST.in`` by default.
+   Without the presence of a ``MANIFEST.in`` file or without checking your
+   source code into a version control repository, ``setup.py sdist`` places
+   only *Python source files* (files ending with a ``.py`` extension) into
+   tarballs generated by ``python setup.py sdist``.  This means, for example,
+   if your project was not checked into a setuptools-compatible source
+   control system, and your project directory didn't contain a ``MANIFEST.in``
+   file that told the ``sdist`` machinery to include ``*.pt`` files, the
+   ``myproject/templates/mytemplate.pt`` file would not be included in the
+   generated tarball.
+
+   Projects generated by Pyramid paster templates include a default
+   ``MANIFEST.in`` file.  The ``MANIFEST.in`` file contains declarations
+   which tell it to include files like ``*.pt``, ``*.css`` and ``*.js`` in
+   the generated tarball.  If you include files with extensions other than
+   the files named in the project's ``MANIFEST.in`` and you don't make use of
+   a setuptools-compatible version control system, you'll need to edit the
+   ``MANIFEST.in`` file and include the statements necessary to include your
+   new files.  See http://docs.python.org/distutils/sourcedist.html#principle
+   for more information about how to do this.
+
+   You can also delete ``MANIFEST.in`` from your project and rely on a
+   setuptools feature which simply causes all files checked into a version
+   control system to be put into the generated tarball.  To allow this to
+   happen, check all the files that you'd like to be distributed along with
+   your application's Python files into Subversion.  After you do this, when
+   you rerun ``setup.py sdist``, all files checked into the version control
+   system will be included in the tarball.  If you don't use Subversion, and
+   instead use a different version control system, you may need to install a
+   setuptools add-on such as ``setuptools-git`` or ``setuptools-hg`` for this
+   behavior to work properly.
 
 ``setup.cfg``
 ~~~~~~~~~~~~~
